syntax = "proto3";
option java_multiple_files = true;
package tr.com.altindalorcun.carservice;

message CarDto{
  string id = 1;
  string brand = 2;
  string model = 3;
  string licensePlate = 4;
}

message Id {
  string id = 1;
}

service CarService {
  rpc findCarById(Id) returns (CarDto);
}